--- a/j.html
+++ b/j.html
@@ -7,9 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>APTECH CLASES</h1>
-    
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae, odit?
-    
+    <h1>HELLO WORLD</h1>
 </body>
 </html>
